# MSBirdBox

./: .gitattributes  .gitignore  README.md  StaticGameServer.js  Usb0 Network Interface  index.html
docs/: segment-filename-format.txt
learning-module/: .gitignore  index.html  learning-module.csproj  learning-module.sln
learning-module-statserver/: app.js  package.json  public  run-osx.sh  run-ubuntu.sh  server.js
learning-module-statserver/config/: database.js  passport.js
learning-module-statserver/routes/: account.js  api.js
learning-module/Properties/: AssemblyInfo.cs
learning-module/css/: achievements.css  base.css  game.css  level-complete.css  level-select.css  library.css  login.css  title.css
learning-module/js/: _references.js  achievements.js  base.js  database.js  game.js  gameDB.php  level-complete.js  level-select.js  library.js  login.js  login.php  postScore.php  sessionPasser.js  stats.js  title.js
prototype/: app.js  button-handler.py  config.js  package.json  recorder.js
prototype/native/: Makefile  (+1 more)
recorder2/: .gitattributes  .gitignore  CMakeLists.txt
recorder2/CMakeModules/: FindCairo.cmake  FindLibSndFile.cmake  FindPortAudio.cmake
recorder2/controller/: .gitignore  app.js  package.json  run-osx.sh  run-ubuntu.sh  server.js
recorder2/controller/config/: config.json  schedule.json
recorder2/controller/modules/: config.js  metadata-parser.js  path-initializer.js  recorder-controller.js  recording-helpers.js  splitter-interface.js  util.js
recorder2/controller/public/: index.html
recorder2/controller/public/css/: database-page.css  recording-viewer.css  settings-page.css  view.css
recorder2/controller/public/js/: _references.js  config.js  database-page.js  database.js  login.js  login.php  recording-list.js  recording-viewer.js  sessionPasser.js  settings-page.js  status-page.js  view.js
recorder2/controller/public/js/ext/: jquery-2.2.0-vsdoc.js
recorder2/controller/routes/: index.js  recordings.js  score.js  settings.js  status.js
recorder2/data/recordings/: Automatic Recording 2016-06-27_09-25-10.metadata  Automatic Recording 2016-07-02_14-00-00.metadata  Automatic Recording 2016-07-03_14-00-00.metadata  Automatic Recording 2016-07-09_14-00-00.metadata  Automatic Recording 2016-07-10_14-00-00.metadata  Automatic Recording 2016-07-16_14-00-00.metadata  Automatic Recording 2016-07-17_14-00-00.metadata  Automatic Recording 2016-07-23_14-00-00.metadata  Automatic Recording 2016-07-24_14-00-00.metadata  Automatic Recording 2016-08-02_11-26-04.metadata  Automatic Recording 2017-04-07_14-00-00.metadata  Automatic Recording 2017-04-08_14-00-00.metadata  Automatic Recording 2017-04-09_14-00-00.metadata  Automatic Recording 2017-04-10_14-00-00.metadata  Automatic Recording 2017-04-11_14-00-00.metadata  Automatic Recording 2017-04-12_14-00-00.metadata  Automatic Recording 2017-04-13_14-00-00.metadata  Automatic Recording 2017-04-14_14-00-00.metadata  Automatic Recording 2017-04-15_14-00-00.metadata  Automatic Recording 2017-04-16_14-00-00.metadata  Automatic Recording 2017-04-17_14-00-00.metadata  Automatic Recording 2017-04-18_14-00-00.metadata  Automatic Recording 2017-04-19_14-00-00.metadata  Automatic Recording 2017-04-20_14-00-00.metadata  Automatic Recording 2017-04-21_14-00-00.metadata  Automatic Recording 2017-04-22_14-00-00.metadata  Automatic Recording 2017-04-23_14-00-00.metadata  Automatic Recording 2017-04-24_14-00-00.metadata  Manual_Recording_2016-06-05_19_34_05.metadata  Manual_Recording_2016-06-06_14_45_49.metadata  Manual_Recording_2016-06-10_10_04_57.metadata  Manual_Recording_2016-06-27_10_07_20.metadata  Manual_Recording_2016-06-27_10_28_29.metadata  Manual_Recording_2016-06-30_10_04_10.metadata  Manual_Recording_2016-06-30_10_13_39.metadata  Manual_Recording_2016-08-02_11_25_12.metadata  Manual_Recording_2016-08-11_22_33_09.metadata  Manual_Recording_2016-11-03_11_57_03.metadata  Manual_Recording_2017-03-14_14_06_51.metadata  Manual_Recording_2017-04-04_16_27_43.metadata  (+10 more)
recorder2/src/analyser/: CMakeLists.txt  analyser.cpp  analyser.h  main.cpp
recorder2/src/recorder/: CMakeLists.txt  main.cpp  monitor.cpp  monitor.h  recorder.cpp  recorder.h  recording_writer.cpp  recording_writer.h  segment_writer.cpp  segment_writer.h  source.cpp  source.h  source_portaudio.cpp  source_portaudio.h  source_stdin.cpp  source_stdin.h  source_sweep.cpp  source_sweep.h
recorder2/src/shared/: CMakeLists.txt  common.h  format.h  metadata.cpp  metadata.h  rms.cpp  rms.h  segment_extractor.cpp  segment_extractor.h  spectrogram_image_generator.cpp  spectrogram_image_generator.h  util.cpp  util.h
recorder2/src/splitter/: CMakeLists.txt  main.cpp
(+53 files in other folders)
